fixed scroll link on mobile

--- a/wp-content/themes/almanac-theme/scss/site/sections/_home-page.scss
+++ b/wp-content/themes/almanac-theme/scss/site/sections/_home-page.scss
@@ -1,16 +1,20 @@
 .slider {position: relative; text-align: center;}
 .slider .small-link {
+	display: none;
 	position: absolute;
 	bottom: 30px;
 	left: 0;
 	right: 0;
-	display: inline-block;
+	// display: inline-block;
 	width: 200px;
 	margin: auto;
 	z-index: 10;
 	text-transform: uppercase;
 	font-size: em(20px);
 	color: map-get($colors, 'white');
+	@media(min-width: 800px){
+		display: block;
+	}
 	
 	&:after {
 		content: "";
